homework_1/compile_log
task.cpp:129:26: error: expected ‘)’ before ‘ntype_’
 Message(NotificationType ntype_,string text_):notification_type(ntype_),text(text_) {}
                          ^
task.cpp: In member function ‘void LibraryModel::addUser(User&)’:
task.cpp:211:54: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
    view->Notify(Message(Error,"User already exists!")); 
                                                      ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp: In member function ‘void LibraryModel::delUser(User&)’:
task.cpp:229:53: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
  view->Notify(Message(Error,"User does not exists!"));
                                                     ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp: In member function ‘void LibraryModel::addBook(Book&)’:
task.cpp:238:54: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
    view->Notify(Message(Error,"Book already exists!"));
                                                      ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp: In member function ‘void LibraryModel::delBook(Book&)’:
task.cpp:256:53: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
  view->Notify(Message(Error,"Book does not exists!"));
                                                     ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp: In member function ‘void LibraryModel::LentABookToUser(Book&, User&)’:
task.cpp:262:76: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
   view->Notify(Message(Notification,"This book is aleady owed by someone!"));
                                                                            ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:266:10: error: within this context
  if(user.borrowed_books.size() > MaxUserBooks)
          ^
task.cpp:268:65: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
   view->Notify(Message(Notification,"User owes too much books!"));
                                                                 ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:272:23: error: within this context
  for(auto iter = user.borrowed_books.begin();iter != user.borrowed_books.end();iter++)
                       ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:272:59: error: within this context
  for(auto iter = user.borrowed_books.begin();iter != user.borrowed_books.end();iter++)
                                                           ^
task.cpp:276:67: error: invalid initialization of non-const reference of type ‘Message&’ from an rvalue of type ‘Message’
    view->Notify(Message(Error,"User user already owes this book!"));
                                                                   ^
task.cpp:198:6: note:   initializing argument 1 of ‘void LibraryView::Notify(Message&) const’
 void LibraryView::Notify(Message& msg) const
      ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:281:7: error: within this context
  user.borrowed_books.push_back(book);
       ^
task.cpp: In function ‘void TakeABookFromUser(Book&, User&)’:
task.cpp:40:9: error: ‘size_t User::id’ is private
  size_t id;
         ^
task.cpp:289:26: error: within this context
  if(book.getBookOwner()->id != user.getUserId())
                          ^
task.cpp:291:3: error: ‘view’ was not declared in this scope
   view->Notify(Message(Error,"This book owes to another user!"));
   ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:295:23: error: within this context
  for(auto iter = user.borrowed_books.begin();iter != user.borrowed_books.end();iter++)
                       ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:295:59: error: within this context
  for(auto iter = user.borrowed_books.begin();iter != user.borrowed_books.end();iter++)
                                                           ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:298:9: error: within this context
    user.borrowed_books.erase(iter);
         ^
task.cpp: In member function ‘std::vector<User> LibraryModel::getUsersWithExpiredBooks() const’:
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:315:30: error: within this context
   for(size_t i = 0;i < iter->borrowed_books.size();i++)
                              ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:317:24: error: within this context
    lasted_days = iter->borrowed_books[i].year*356;
                        ^
task.cpp:317:42: error: ‘const value_type {aka const class Book}’ has no member named ‘year’
    lasted_days = iter->borrowed_books[i].year*356;
                                          ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:318:25: error: within this context
    lasted_days += iter->borrowed_books[i].month*30;
                         ^
task.cpp:318:43: error: ‘const value_type {aka const class Book}’ has no member named ‘month’
    lasted_days += iter->borrowed_books[i].month*30;
                                           ^
task.cpp:42:20: error: ‘std::vector<Book> User::borrowed_books’ is private
  std::vector<Book> borrowed_books; 
                    ^
task.cpp:319:25: error: within this context
    lasted_days += iter->borrowed_books[i].day;
                         ^
task.cpp:319:43: error: ‘const value_type {aka const class Book}’ has no member named ‘day’
    lasted_days += iter->borrowed_books[i].day;
                                           ^
